@@ -33,8 +33,8 @@ GSHA*	gnet_sha_new_incremental (void);
 void	gnet_sha_update (GSHA* gsha, const guchar* buffer, guint length);
 void	gnet_sha_final (GSHA* gsha);
 	
-gint 	gnet_sha_equal (const gpointer p1, const gpointer p2);
-guint	gnet_sha_hash (const GSHA* gsha);
+gint 	gnet_sha_equal (gconstpointer p1, gconstpointer p2);
+guint	gnet_sha_hash (gconstpointer p);
 	
 guint8* gnet_sha_get_digest (const GSHA* gsha);
 gchar*  gnet_sha_get_string (const GSHA* gsha);
